--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -46,6 +46,12 @@ li, a {
 
 }
 
+p {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 1%;
+}
+
 .Slideshowblock {
     position: relative;
     float: right;
@@ -70,7 +76,7 @@ li, a {
     height: 180px;
     width: 1546px;
     top: 50px;
-    background-color: rgba(0, 0, 0, 0.068);
+    background-color: rgba(0, 0, 0, 0.);
 }
 
 .Eventshblock {
@@ -85,6 +91,12 @@ li, a {
 
 }
 
+h1 {
+    text-align: center;
+    margin-top: 0.5%;
+    font-size: 40px;
+}
+
 .Events2 {
     position: relative;
     float: right;
@@ -92,7 +104,7 @@ li, a {
     height: 500px;
     width: 1546px;
     top: 50px;
-    background-color: rgba(0, 0, 0, 0.178);
+    background-color: rgba(0, 0, 0, 0.);
 }
 
 .Eventsimg {
@@ -140,17 +152,29 @@ li, a {
 #Event2 {
    position: absolute;
    margin-top: 18%;
-   margin-left: 38%;
+   margin-left: 37.8%;
     height: 50px;
-    width: 395px;
+    width: 396px;
     border: solid black 2px;
 }
 
 #Event3 {
     position: absolute;
+    margin-top: 18%;
+    margin-left: 4.9%;
     height: 50px;
-    width: 400px;
+    width: 396px;
     border: solid black 2px;
+}
+
+.Footerblock {
+    
+    position: relative;
+    float: right;
+    width: 1540px;
+    height: 50px;
+    border: solid #00000040;
+    background-color: #e18a81;
 }
 
 }
