--- a/Contact/css/Contact.css
+++ b/Contact/css/Contact.css
@@ -1,193 +1,373 @@
-/*desktop*/
-body{
-    overflow-x: hidden;
-    padding: 0 auto;
-    margin: 0 auto; 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+
+
+@media screen and (min-width: 100px) and (max-width:768px){
+    *   {
+        margin: 0 auto;
+        padding: 0 auto; 
+    }
+
+    #header1 img {
+        height: 70px;
+        position: relative;
+        left: 95px;
+        top: 5px;
+    }
+
+    header li {
+        display: none;
+    }
+
+    #nav2 {
+        color: black;
+        font-family: 'Nunito', sans-serif;
+    }
+
+    .blok {
+        display: none;
+    }
+
+    .blok2 {
+        background-color: #000000;
+        z-index: -2;
+        height: 11vh;
+        width: 100vw;
+        position: relative;
+        top: -75px;
+        left: -10px;
+    }
+
+
+    #item-burger {
+        color: white;
+        position: relative;
+        left: 300px;
+        top: -65px;
+        font-family: 'Nunito', sans-serif;
+    }
+
+    :root {
+        --primary-color: rgba(0, 0, 0, 0.75);
+        --overlay-color: rgba(0, 0, 0, 0.85);
+        --menu-speed: 0.75s;
+      }
+      
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      
+      body {
+        font-family: 'Roboto', sans-serif;
+        line-height: 1.4;
+      }
+      
+      .container {
+        max-width: 960px;
+        margin: auto;
+        overflow: hidden;
+        padding: 0 3rem;
+      }
+      
+      .showcase {
+        background: var(--primary-color);
+        color: #fff;
+        height: 100vh;
+        position: relative;
+      }
+      
+      .showcase:before {
+        content: '';
+        background: url('https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center center/cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+      
+      .showcase .showcase-inner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 100%;
+      }
+      
+      .showcase h1 {
+        font-size: 4rem;
+      }
+      
+      .showcase p {
+        font-size: 1.3rem;
+      }
+      
+      .btn {
+        display: inline-block;
+        border: none;
+        background: var(--primary-color);
+        color: #fff;
+        padding: 0.75rem 1.5rem;
+        margin-top: 1rem;
+        transition: opacity 1s ease-in-out;
+        text-decoration: none;
+      }
+      
+      .btn:hover {
+        opacity: 0.7;
+      }
+      
+      /* MENU STYLES */
+      .menu-wrap {
+        position: relative;
+        top: -65px;
+        left: 0;
+        z-index: 1;
+      }
+      
+      .menu-wrap .toggler {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        opacity: 0;
+      }
+      
+      .menu-wrap .hamburger {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 60px;
+        height: 60px;
+        padding: 1rem;
+        background: var(--primary-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      /* Hamburger Line */
+      .menu-wrap .hamburger > div {
+        position: relative;
+        flex: none;
+        width: 100%;
+        height: 2px;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.4s ease;
+      }
+      
+      /* Hamburger Lines - Top & Bottom */
+      .menu-wrap .hamburger > div::before,
+      .menu-wrap .hamburger > div::after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -10px;
+        width: 100%;
+        height: 2px;
+        background: inherit;
+      }
+      
+      /* Moves Line Down */
+      .menu-wrap .hamburger > div::after {
+        top: 10px;
+      }
+      
+      /* Toggler Animation */
+      .menu-wrap .toggler:checked + .hamburger > div {
+        transform: rotate(135deg);
+      }
+      
+      /* Turns Lines Into X */
+      .menu-wrap .toggler:checked + .hamburger > div:before,
+      .menu-wrap .toggler:checked + .hamburger > div:after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+      
+      /* Rotate On Hover When Checked */
+      .menu-wrap .toggler:checked:hover + .hamburger > div {
+        transform: rotate(225deg);
+      }
+      
+      /* Show Menu */
+      .menu-wrap .toggler:checked ~ .menu {
+        visibility: visible;
+      }
+      
+      .menu-wrap .toggler:checked ~ .menu > div {
+        transform: scale(1);
+        transition-duration: var(--menu-speed);
+      }
+      
+      .menu-wrap .toggler:checked ~ .menu > div > div {
+        opacity: 1;
+        transition:  opacity 0.4s ease 0.4s;
+      }
+      
+      .menu-wrap .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .menu-wrap .menu > div {
+        background: var(--overlay-color);
+        border-radius: 50%;
+        width: 200vw;
+        height: 200vw;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+      }
+      
+      .menu-wrap .menu > div > div {
+        text-align: center;
+        max-width: 90vw;
+        max-height: 100vh;
+        opacity: 0;
+        transition: opacity 0.4s ease;
+      }
+      
+      .menu-wrap .menu > div > div > ul > li {
+        list-style: none;
+        color: #fff;
+        font-size: 1.5rem;
+        padding: 1rem;
+      }
+      
+      .menu-wrap .menu > div > div > ul > li > a {
+        color: inherit;
+        text-decoration: none;
+        transition: color 0.4s ease;
+      }
 }
 
-@media (min-width: 1281px){
+@media only screen and (max-width:1024px) and (min-width: 768px){
+    #item-burger {
+        display: none;
+    }
 
-.Navblock {
-    position: fixed;
-    width: 300px;
-    height: 1009px;
-    background-color: black;
-}
-
-.Logo{
-    width: 300px;
-    margin-top: 10%;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    color: white;
-}
-
-li, a {
-    display: block;
-    color: white;
+    #header1 img {
+        height: 70px;
+        position: relative;
+        left: 10px;
+    }
     
-    padding: 4px 14px;
-    font-size: 25px;
-    text-decoration: none;
-}
+    .blok {
+        display: none;
+    }
 
-.Offerblock {
-    position: relative;
-    float: right;
-    width: 1540px;
-    height: 60px;
-    border: solid #00000040;
-    background-color: #e18a81;
-    
+    .blok2 {
+        display: none;
+    }
 
-}
+    .blok3 {
+        height: 100vh;
+        width: 30vw;
+        background-color: #000000;
+        position: absolute;
+        right: 590px;
+        z-index: -2;
+        bottom: 10px;
+    }
 
-p {
-    text-align: center;
-    font-size: 30px;
-    margin-top: 1%;
-}
+    nav a { 
+        text-decoration: none;
+        padding: 0vh 2vw;
+        font-size: 1.5rem;
+        position: relative;
+        left: 20px;
+        color: white;
+        font-family: 'Nunito', sans-serif;
+        top: 1/px;
+    }
 
-.Slideshowblock {
-    position: relative;
-    float: right;
-    height: 800px;
-    width: 1546px;
-    background-color: black;
-    border-bottom: solid black 2px;
-}
+    nav a:hover {
+        background-color: #3d4d58;
+    }
 
-.Slideshowimg {
-    position: relative;
-    float: right;
-    height: 800px;
-    width: 1546px;
-    
-}
+    header li {
+        list-style: none;
+    }
 
-.Events {
-    position: relative;
-    float: right;
-    
-    height: 180px;
-    width: 1546px;
-    top: 50px;
-    background-color: rgba(0, 0, 0, 0.);
-}
-
-.Eventshblock {
-    
-    margin-left: auto;
-    margin-right: auto;
-    width: 8em;
-    width: 350px;
-    height: 70px;
-    background-color: white;
-    border: solid black 2px;
-
-}
-
-h1 {
-    text-align: center;
-    margin-top: 0.5%;
-    font-size: 40px;
-}
-
-.Events2 {
-    position: relative;
-    float: right;
-    
-    height: 500px;
-    width: 1546px;
-    top: 50px;
-    background-color: rgba(0, 0, 0, 0.);
-}
-
-#EventImg1 {
-    position: relative;
-    float: right;
-    height: 280px;
-    width: 400px;
-    margin-left: 7%;
-    margin-right: 3.5%;
-    background-color: black;
-}
-
-#EventImg2 {
-    position: relative;
-    float: right;
-    height: 280px;
-    width: 400px;
-    margin-left: 7%;
-    background-color: black;
-}
-
-#EventImg3 {
-    position: relative;
-    float: right;
-    height: 280px;
-    width: 400px;
-
-    background-color: black;
-}
-
-#Event1 {
-    position: absolute;
-    margin-top: 18%;
-    margin-left: 70.7%;
-    height: 50px;
-    width: 395px;
-    border: solid black 2px;
-    
-}
-
-#Event2 {
-   position: absolute;
-   margin-top: 18%;
-   margin-left: 37.8%;
-    height: 50px;
-    width: 396px;
-    border: solid black 2px;
-}
-
-#Event3 {
-    position: absolute;
-    margin-top: 18%;
-    margin-left: 4.9%;
-    height: 50px;
-    width: 396px;
-    border: solid black 2px;
-}
-
-.Footerblock {
-    
-    position: relative;
-    float: right;
-    width: 1540px;
-    height: 50px;
-    border: solid #00000040;
-    background-color: #e18a81;
+    .menu-wrap {
+        display: none;
 }
 
 }
 
-/*desktop laptop*/
-@media (min-width: 1025px) and (max-width: 1280px){
+@media only screen and (max-width:1600px) and (min-width: 1024px){
+    *   {
+        margin: 0 auto;
+        padding: 0 auto; 
 
+    }
+
+    #item-burger {
+        display: none;
+    }
+
+    #header1 img {
+        height: 100px;
+        position: relative;
+        top: 10px;
+    }
+
+    nav a { 
+        text-decoration: none;
+        padding: 0vh 2vw;
+        font-size: 1.5rem;
+        position: relative;
+        left: 20px;
+        color: white;
+        font-family: 'Nunito', sans-serif;
+        top: 20px;
+    }
+
+    nav a:hover {
+        background-color: #3d4d58;
+    }
+
+    header li {
+        list-style: none;
+    }
+
+    .blok{
+        height: 100vh;
+        width: 20vw;
+        background-color: #000000;
+        position: absolute;
+        right: 1350px;
+        z-index: -2;
+        bottom: 10px;
+    }
+
+    .blok2 {
+        display: none;
+    }
+
+    .menu-wrap {
+        display: none;
 }
-
-
-/*Ipad-tablet*/
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape){
-
-}
-
-
-/*Telefoon*/
-@media (min-width: 320px) and (max-width: 480px){
-
 }
