--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
 /*desktop*/
-body{
-    overflow-x: hidden;
+*{
+   overflow-x: hidden;
     padding: 0 auto;
     margin: 0 auto; 
 }
 
 @media (min-width: 1281px){
 
+
+
+
 .Navblock {
-    position: fixed;
+    position: relative;
     width: 300px;
-    height: 1009px;
+    height: 1654px;
     background-color: black;
 }
 
@@ -188,7 +191,175 @@ h1 {
 
 /*Ipad-tablet*/
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape){
-
+    .Navblock {
+        position: fixed;
+        width: 250px;
+        height: 1009px;
+        background-color: black;
+    }
+    
+    .Logo{
+        width: 250px;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+    
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        color: white;
+    }
+    
+    li, a {
+        display: block;
+        color: white;
+        
+        padding: 4px 14px;
+        font-size: 25px;
+        text-decoration: none;
+    }
+    
+    .Offerblock {
+        position: relative;
+        float: right;
+        width: 768px;
+        height: 60px;
+        border: solid #00000040;
+        background-color: #e18a81;
+        
+    
+    }
+    
+    p {
+        font-family: 'Nunito';
+        text-align: center;
+        font-size: 30px;
+        margin-top: 1%;
+    }
+    
+    .Slideshowblock {
+        position: relative;
+        float: right;
+        height: 450px;
+        width: 774px;
+        background-color: black;
+        border-bottom: solid black 2px;
+    }
+    
+    .Slideshowimg {
+        position: relative;
+        float: right;
+        height: 450px;
+        width: 774px;
+        
+    }
+    
+    .Events {
+        position: relative;
+        float: right;
+        
+        height: 180px;
+        width: 1546px;
+        top: 50px;
+        background-color: rgba(0, 0, 0, 0.);
+    }
+    
+    .Eventshblock {
+        
+        margin-left: auto;
+        margin-right: auto;
+        width: 8em;
+        width: 350px;
+        height: 70px;
+        background-color: white;
+        border: solid black 2px;
+    
+    }
+    
+    h1 {
+        text-align: center;
+        margin-top: 0.5%;
+        font-size: 40px;
+    }
+    
+    .Events2 {
+        position: relative;
+        float: right;
+        
+        height: 500px;
+        width: 1546px;
+        top: 50px;
+        background-color: rgba(0, 0, 0, 0.);
+    }
+    
+    
+    #EventImg1 {
+        position: relative;
+        float: right;
+        height: 280px;
+        width: 400px;
+        margin-left: 7%;
+        margin-right: 3.5%;
+        background-color: black;
+    }
+    
+    #EventImg2 {
+        position: relative;
+        float: right;
+        height: 280px;
+        width: 400px;
+        margin-left: 7%;
+        background-color: black;
+    }
+    
+    #EventImg3 {
+        position: relative;
+        float: right;
+        height: 280px;
+        width: 400px;
+    
+        background-color: black;
+    }
+    
+    #Event1 {
+        position: absolute;
+        margin-top: 18%;
+        margin-left: 70.7%;
+        height: 50px;
+        width: 395px;
+        border: solid black 2px;
+        
+    }
+    
+    #Event2 {
+       position: absolute;
+       margin-top: 18%;
+       margin-left: 37.8%;
+        height: 100px;
+        width: 396px;
+        border: solid black 2px;
+    }
+    
+    #Event3 {
+        position: absolute;
+        margin-top: 18%;
+        margin-left: 4.9%;
+        height: 100px;
+        width: 396px;
+        border: solid black 2px;
+    }
+    
+    .Footerblock {
+        
+        position: relative;
+        float: right;
+        width: 1540px;
+        height: 100px;
+        border: solid #00000040;
+        background-color: #e18a81;
+    }
+    
 }
 
 
