--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -6,14 +6,32 @@
     padding: 0 auto;
     margin: 0 auto; 
 }
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+img {
+    padding: 0;
+    margin: 0;
+    height: auto;
+}
 
 @media (min-width: 1281px){
 
+header {
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 300px;
+    height: 1654px;
+    float: left;
 
+}
 
 
 .Navblock {
-    position: relative;
+    
     width: 300px;
     height: 1654px;
     background-color: black;
@@ -44,7 +62,7 @@ li, a {
 .Offerblock {
     position: relative;
     float: right;
-    width: 1540px;
+    width: 1523px;
     height: 60px;
     border: solid #00000040;
     background-color: #e18a81;
@@ -63,7 +81,7 @@ p {
     position: relative;
     float: right;
     height: 800px;
-    width: 1546px;
+    width: 1529px;
     background-color: black;
     border-bottom: solid black 2px;
 }
@@ -72,7 +90,7 @@ p {
     position: relative;
     float: right;
     height: 800px;
-    width: 1546px;
+    max-width: 100%;
     
 }
 
