--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -2,36 +2,32 @@
 
 /*desktop*/
 *{
-   overflow-x: hidden;
     padding: 0 auto;
     margin: 0 auto; 
 }
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-end;
-}
-img {
-    padding: 0;
-    margin: 0;
-    height: auto;
-}
+
+
 
 @media (min-width: 1281px){
-
+    .menu-wrap {
+        display: none;
+    }
+    .toggler {
+        display: none;
+    }
+    .hamburger {
+        display: none;
+    }
+    .menu {
+        display: none;
+    }
 header {
-    justify-content: flex-end;
-    align-items: flex-end;
-    width: 300px;
-    height: 1654px;
-    float: left;
+    position: fixed;
+    background-color: black;
 
 }
-
-
 .Navblock {
-    
+    position: relative;
     width: 300px;
     height: 1654px;
     background-color: black;
@@ -90,7 +86,7 @@ p {
     position: relative;
     float: right;
     height: 800px;
-    max-width: 100%;
+    width: 1546px;
     
 }
 
@@ -209,8 +205,29 @@ h1 {
 
 /*Ipad-tablet*/
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape){
-    .Navblock {
+    .menu-wrap {
+        display: none;
+    }
+    .toggler {
+        display: none;
+    }
+    .hamburger {
+        display: none;
+    }
+    .menu {
+        display: none;
+    }
+
+    header {
         position: fixed;
+        width: 250px;
+        height: 1009px;
+        background-color: black; 
+        
+
+    }
+    .Navblock {
+        
         width: 250px;
         height: 1009px;
         background-color: black;
@@ -259,7 +276,7 @@ h1 {
     .Slideshowblock {
         position: relative;
         float: right;
-        height: 450px;
+        height: 430px;
         width: 774px;
         background-color: black;
         border-bottom: solid black 2px;
@@ -285,8 +302,9 @@ h1 {
     
     .Eventshblock {
         
-        margin-left: auto;
+        margin-left: 63%;
         margin-right: auto;
+        
         width: 8em;
         width: 350px;
         height: 70px;
@@ -305,7 +323,7 @@ h1 {
         position: relative;
         float: right;
         
-        height: 500px;
+        height: 1800px;
         width: 1546px;
         top: 50px;
         background-color: rgba(0, 0, 0, 0.);
@@ -314,57 +332,63 @@ h1 {
     
     #EventImg1 {
         position: relative;
-        float: right;
-        height: 280px;
-        width: 400px;
-        margin-left: 7%;
-        margin-right: 3.5%;
+        
+        height: 320px;
+        width: 550px;
+        margin-left: 57%;
+        margin-bottom: 0;
+        
         background-color: black;
     }
     
     #EventImg2 {
         position: relative;
-        float: right;
-        height: 280px;
-        width: 400px;
-        margin-left: 7%;
+        
+        height: 320px;
+        width: 550px;
+        
+        margin-left: 57%;
+        margin-top: 15%;
+       
         background-color: black;
     }
     
     #EventImg3 {
         position: relative;
-        float: right;
-        height: 280px;
-        width: 400px;
-    
+        
+        margin-left: 57%;
+        margin-top: 15%;
+        height: 320px;
+        width: 550px;
+        
         background-color: black;
     }
     
     #Event1 {
         position: absolute;
-        margin-top: 18%;
-        margin-left: 70.7%;
-        height: 50px;
-        width: 395px;
+        margin-top: -0.4%;
+        margin-left: 57%;
+        height: 100px;
+        width: 546px;
         border: solid black 2px;
         
     }
     
     #Event2 {
        position: absolute;
-       margin-top: 18%;
-       margin-left: 37.8%;
+       margin-top: -0.4%;
+       margin-left: 57%;
         height: 100px;
-        width: 396px;
+        width: 546px;
         border: solid black 2px;
     }
     
     #Event3 {
         position: absolute;
-        margin-top: 18%;
-        margin-left: 4.9%;
+        margin-top: -0.4%;
+        margin-left: 57%;
         height: 100px;
-        width: 396px;
+        width: 546px;
         border: solid black 2px;
     }
     
@@ -372,7 +396,7 @@ h1 {
         
         position: relative;
         float: right;
-        width: 1540px;
+        width: 768px;
         height: 100px;
         border: solid #00000040;
         background-color: #e18a81;
@@ -382,17 +406,259 @@ h1 {
 
 
 /*Telefoon*/
-@media (min-width: 320px) and (max-width: 480px){
+@media  screen and(min-width: 360px) and (max-width:740px){
 
-.Navblock {
+    
+    #header1 img {
+        height: 70px;
+        position: relative;
+        left: 95px;
+        top: 5px;
+    }
+
+    header li {
+        display: none;
+    }
+
+    #nav2 {
+        color: black;
+        font-family: 'Nunito', sans-serif;
+    }
+
+    .blok {
+        display: none;
+    }
+
+    .blok2 {
+        background-color: #000000;
+        z-index: -2;
+        height: 11vh;
+        width: 100vw;
+        position: relative;
+        top: -75px;
+        left: -10px;
+    }
+
+    :root {
+        --primary-color: rgba(0, 0, 0, 0.75);
+        --overlay-color: rgba(0, 0, 0, 0.85);
+        --menu-speed: 0.75s;
+      }
+      
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      
+      body {
+        font-family: 'Roboto', sans-serif;
+        line-height: 1.4;
+      }
+      
+      .container {
+        max-width: 700px;
+        margin: auto;
+        overflow: hidden;
+        padding: 0 3rem;
+      }
+      
+      .showcase {
+        background: var(--primary-color);
+        color: #fff;
+        height: 100vh;
+        position: relative;
+      }
+      
+      .showcase:before {
+        content: '';
+        background: url('https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center center/cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+      
+      .showcase .showcase-inner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 100%;
+      }
+      
+      .showcase h1 {
+        font-size: 4rem;
+      }
+      
+      .showcase p {
+        font-size: 1.3rem;
+      }
+      
+      .btn {
+        display: inline-block;
+        border: none;
+        background: var(--primary-color);
+        color: #fff;
+        padding: 0.75rem 1.5rem;
+        margin-top: 1rem;
+        transition: opacity 1s ease-in-out;
+        text-decoration: none;
+      }
+      
+      .btn:hover {
+        opacity: 0.7;
+      }
+      
+
+/* MENU STYLES */
+.menu-wrap {
+    position: relative;
+    top: -65px;
+    left: 0;
+    z-index: 1;
+  }
+  
+  .menu-wrap .toggler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+  }
+  
+  .menu-wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 60px;
+    height: 60px;
+    padding: 1rem;
+    background: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* Hamburger Line */
+  .menu-wrap .hamburger > div {
+    position: relative;
+    flex: none;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+  }
+  
+  /* Hamburger Lines - Top & Bottom */
+  .menu-wrap .hamburger > div::before,
+  .menu-wrap .hamburger > div::after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+  }
+  
+  /* Moves Line Down */
+  .menu-wrap .hamburger > div::after {
+    top: 10px;
+  }
+  
+  /* Toggler Animation */
+  .menu-wrap .toggler:checked + .hamburger > div {
+    transform: rotate(135deg);
+  }
+  
+  /* Turns Lines Into X */
+  .menu-wrap .toggler:checked + .hamburger > div:before,
+  .menu-wrap .toggler:checked + .hamburger > div:after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  
+  /* Rotate On Hover When Checked */
+  .menu-wrap .toggler:checked:hover + .hamburger > div {
+    transform: rotate(225deg);
+  }
+  
+  /* Show Menu */
+  .menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+  }
+  
+  .menu-wrap .toggler:checked ~ .menu > div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+  }
+  
+  .menu-wrap .toggler:checked ~ .menu > div > div {
+    opacity: 1;
+    transition:  opacity 0.4s ease 0.4s;
+  }
+  
+  .menu-wrap .menu {
     position: fixed;
-    width: 300px;
-    height: 1009px;
-    background-color: black;
-}
-.Slideshowimg {
-    display: none;
-}
+    top: 1;
+    left: -30;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .menu-wrap .menu > div {
+    background: var(--overlay-color);
+    border-radius: 50%;
+    position: relative;
+    left: -115px;
+    top: -120px;
+    width: 150vw;
+    height: 150vw;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+  }
+  
+  .menu-wrap .menu > div > div {
+    text-align: center;
+    max-width: 5vw;
+    max-height: 100vh;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
+  
+  .menu-wrap .menu > div > div > ul > li {
+    list-style: none;
+    color: #fff;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+  
+  .menu-wrap .menu > div > div > ul > li > a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.4s ease;
+  }
+
     
 
 }
