--- a/Contact/css/Contact.css
+++ b/Contact/css/Contact.css
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
-
-@media screen and (min-width: 100px) and (max-width:768px){
-    *   {
-        margin: 0 auto;
-        padding: 0 auto; 
-    }
-
+/* telefoon */
+@media screen and (min-width: 360px) and (max-width:740px){
     #header1 img {
         height: 70px;
         position: relative;
@@ -37,15 +32,6 @@
         left: -10px;
     }
 
-
-    #item-burger {
-        color: white;
-        position: relative;
-        left: 300px;
-        top: -65px;
-        font-family: 'Nunito', sans-serif;
-    }
-
     :root {
         --primary-color: rgba(0, 0, 0, 0.75);
         --overlay-color: rgba(0, 0, 0, 0.85);
@@ -64,7 +50,7 @@
       }
       
       .container {
-        max-width: 960px;
+        max-width: 700px;
         margin: auto;
         overflow: hidden;
         padding: 0 3rem;
@@ -217,8 +203,8 @@
       
       .menu-wrap .menu {
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 1;
+        left: -30;
         width: 100%;
         height: 100%;
         visibility: hidden;
@@ -231,8 +217,11 @@
       .menu-wrap .menu > div {
         background: var(--overlay-color);
         border-radius: 50%;
-        width: 200vw;
-        height: 200vw;
+        position: relative;
+        left: -115px;
+        top: -120px;
+        width: 150vw;
+        height: 150vw;
         display: flex;
         flex: none;
         align-items: center;
@@ -243,7 +232,7 @@
       
       .menu-wrap .menu > div > div {
         text-align: center;
-        max-width: 90vw;
+        max-width: 5vw;
         max-height: 100vh;
         opacity: 0;
         transition: opacity 0.4s ease;
@@ -261,8 +250,9 @@
         text-decoration: none;
         transition: color 0.4s ease;
       }
+    
 }
-
+/* Tablet */
 @media only screen and (max-width:1024px) and (min-width: 768px){
     #item-burger {
         display: none;
@@ -271,7 +261,7 @@
     #header1 img {
         height: 70px;
         position: relative;
-        left: 10px;
+        left: 2px;
     }
     
     .blok {
@@ -283,13 +273,13 @@
     }
 
     .blok3 {
-        height: 100vh;
+        height: 150vh;
         width: 30vw;
         background-color: #000000;
         position: absolute;
         right: 590px;
         z-index: -2;
-        bottom: 10px;
+        bottom: -120px;
     }
 
     nav a { 
@@ -297,10 +287,10 @@
         padding: 0vh 2vw;
         font-size: 1.5rem;
         position: relative;
-        left: 20px;
+        left: 1px;
         color: white;
         font-family: 'Nunito', sans-serif;
-        top: 1/px;
+        top: 1px;
     }
 
     nav a:hover {
@@ -313,10 +303,20 @@
 
     .menu-wrap {
         display: none;
+    }
+
+    .blok4 {
+        height: 45vh;
+        width: 70vw;
+        position: absolute;
+        z-index: -2;
+        Border: 1px solid black;
+        left: 210px;
+        top: 550px;
+    }
 }
 
-}
-
+/* Desktop*/
 @media only screen and (max-width:1600px) and (min-width: 1024px){
     *   {
         margin: 0 auto;
@@ -354,13 +354,13 @@
     }
 
     .blok{
-        height: 100vh;
+        height: 300vh;
         width: 20vw;
         background-color: #000000;
         position: absolute;
         right: 1350px;
         z-index: -2;
-        bottom: 10px;
+        bottom: -815px;
     }
 
     .blok2 {
@@ -369,5 +369,36 @@
 
     .menu-wrap {
         display: none;
-}
+    }
+
+    .blok4 {
+        height: 90vh;
+        width: 65vw;
+        position: absolute;
+        z-index: -2;
+        Border: 1px solid black;
+        left: 390px;
+        top: 800px;
+    }
+    .radio{
+      display: inline-flex;
+      align-items:center;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+    .radio__input{
+      display: none;
+    }
+    .radio__radio {
+      width: 1,25em;
+      height: 1,25em;
+      border: 2px solid black;
+      border-radius: 50%;
+      margin-right: 10px;
+      box-sizing: border-box;
+      padding: 2px; 
+    }
+    .radio__input:checked {
+       transform: scale(1);
+    }
 }
