--- a/Aanbiedingen/style.css
+++ b/Aanbiedingen/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600&display=swap');
 * {
     margin: 0;
 }
@@ -57,7 +57,20 @@ main h3 {
     text-align: center;
     padding: 15px;
 }
+#title{
+    display: inline-block;
+    margin-left: 43%;
+    margin-right: 30%;
+    padding: 1px 6px 1px;
+    text-align: center;
+    border-radius: 54px;
+    box-shadow: 0px 2px 7px grey;
+    background: white;
+    color: black;
+    font-family: 'Nunito', sans-serif;
+    weight: 600;
 
+}
 .container {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -71,12 +84,11 @@ main h3 {
 .aanbieding {
     text-align: center;
     display: block;
+    font-family: 'Nunito', sans-serif;
   }
 .aanbieding h4 {
     font-size: 30px;
 }
-  .aanbieding-img {
+.aanbieding-img {
     background-color: rgba(236, 236, 236, 0.8);
-    padding: 6px 2px;
-
-  }
+}
