30 maart Contact pagina

--- a/Contact/css/Contact.css
+++ b/Contact/css/Contact.css
@@ -1,46 +1,41 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
-
-
-
-
-/* telefoon */
-@media screen and (min-width: 360px) and (max-width:740px){
-body {
-    margin: 0 auto;
-    padding: 0;}
-    display: flex;
+*{
+  padding: 0 auto;
+  margin: 0 auto;
 }
-/* Tablet */
-@media only screen and (max-width:1024px) and (min-width: 768px){
-body {
-    margin: 0 auto;
-    padding: 0;}
-    display: flex;
-}
-
 
 /* Desktop*/
-@media only screen and (max-width:1440px) and (min-width: 900px){
+@media (max-width:1440px){
 
     body {
-    margin: 0 auto;
-    padding: 0;
     display: flex;
     }
 
     header {
       width: 25vw;
       color: white;
-      background-colour: black;
+      background-color: black;
+      float:left;
     }
 
     main{
-      width: 25;
-      background-colour: purple;
+      width: 25vw;
+      height: 100vh;
     }
-  hoofdmenu{
 
-  }
+}
+
+/* Tablet */
+@media only screen and (max-width:1024px) and (min-width: 768px){
+body {
+    display: flex;
+}
+}
+/* telefoon */
+@media screen and (min-width: 360px) and (max-width:740px){
+body {
+    display: flex;
+}
 }
