--- a/Contact/css/Contact.css
+++ b/Contact/css/Contact.css
@@ -17,7 +17,7 @@
       width: 25vw;
       color: white;
       background-color: black;
-      float:left;
+      float: left:
     }
 
     main{
