--- a/Aanbiedingen/css/style.css
+++ b/Aanbiedingen/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 header {
     width: 25vw;
-    height: 100vh;
+    height: 200vh;
     background-color: black;
     list-style: none;
     position: flex;
@@ -59,11 +59,8 @@ main h3 {
 }
 #title{
     display: inline-block;
-    margin-left: 42%;
-    margin-right: 30%;
-    margin-top: 1.5vh;
     padding: 1px 9px 1px;
-    text-align: center;
+    align-items: center;
     border-radius: 54px;
     box-shadow: 0px 2px 7px grey;
     background: white;
@@ -101,28 +98,63 @@ main h3 {
 .aanbieding-img {
     background-color: rgba(236, 236, 236, 0.6);
     width: 65%;
-    margin: auto;
     padding: 20px;
 }
 
 /* mobiel */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 360px) {
+    * {
+    margin: 0;
+}
+    body {
+        display: flex;
+    }
+    header {
+        display: none;
+    }
+    header img{
+        display: none;
+    }
+    header ul {
+        display: none;
+    }
+
+    main {
+        position: flex;
+        
+    }
+    main img{
+        width: 360px;
+        height: 100px;
+        object-fit: cover;
+        align-items: center;
+    }
     #bar {
         background-color: pink;
-        height: 10px;
-        width: 70%;
+        height: 45px;
+        width: 100%;
     }
     main h3 {
         flex-wrap: wrap;
         text-align: center;
-        padding: 5px;
+        padding: 12px;
     }
-
+    #title{
+        display: flex;
+        justify-content: center;
+        border-radius: 54px;
+        box-shadow: 0px 2px 7px grey;
+        background: white;
+        color: black;
+        font-family: 'Nunito', sans-serif;
+        font-weight: 300;
+        font-size: 20%;
+    }
     .container {
         display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: auto;
         column-gap: 10px;
-        padding: 50px;
+        padding: 10px;
     
     }
     .aanbieding img{
@@ -136,17 +168,10 @@ main h3 {
         display: grid;
         font-family: 'Nunito', sans-serif;
       }
-    .aanbieding p{
-        padding: 10px;
-    }
-    .aanbieding h4 {
-        font-size: 30px;
-        
-    }
-    .aanbieding-img {
+
+      .aanbieding-img {
         background-color: rgba(236, 236, 236, 0.6);
-        width: 65%;
-        margin: auto;
-        padding: 20px;
+        width: 75%;
     }
+    
 }
