--- a/css/sponsorsstyle.css
+++ b/css/sponsorsstyle.css
@@ -11,12 +11,11 @@
 /* Desktop*/
 @media only screen and (max-width:1440px) and (min-width: 900px){
     *   {
-        margin: 0 auto;
         padding: 0 auto; 
-
     }
 
     body{
+        margin: 0 auto;
         display: flex;
     }
 
@@ -30,7 +29,7 @@
 
     header {
         width: 25vw;
-        height: 100vh;
+        height: 155vh;
         background-color: black;
         list-style: none;
         position: flex;
@@ -66,9 +65,9 @@
         font-family: 'Nunito', sans-serif;
         text-align: center;
         background-color: pink;
-        width: 75vw;
+        width: 76vw;
         font-size: 30px;
-        margin-top: -180px;
+        margin-top: 0px;
     }
 
     main {
@@ -81,6 +80,40 @@
 
     video {
         display: flex;
-
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        height: 610px;
+        margin-top: -30px;
     }
+
+    #maininfo p {
+        font-family: 'Nunito', sans-serif;
+        font-size: 25px;
+        margin-top: 60px;
+        width: 75vw;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 100vw;
+        width: 70vw;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid black;
+        margin-left: 2.5vw;
+    }
+
+    .grid-container article {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        margin: 10px;
+        text-align: left;
+    }
+    .grid-container img{
+        height: 100px;
+        width: 100px;
+    }
+
 }
