--- a/Contact/css/Contact.css
+++ b/Contact/css/Contact.css
@@ -71,7 +71,7 @@
       display: inline-block;
       padding-top: 10vh;
       margin-bottom: 5vh;
-      margin-left: 55vh;
+      margin-left: 80vh;
       padding: 1px 9px 1px;
       border-radius: 54px;
       box-shadow: 0px 2px 7px grey;
@@ -86,29 +86,39 @@
     .naam{
       text-decoration: none;
       padding: 0vh 2vw;
-      font-size: 1.5rem;
+      font-size: 1.0rem;
       position: sticky;
-      left: 20px;
       font-family:'Nunito',sans-serif
     }
     .email{
       text-decoration: none;
       padding: 0vh 2vw;
-      font-size: 1.5rem;
+      font-size: 1.0rem;
       position: sticky;
-      left: 20px;
       font-family:'Nunito',sans-serif
     }
     .telefoon{
       text-decoration: none;
       padding: 0vh 2vw;
-      font-size: 1.5rem;
+      font-size: 1.0rem;
       position: sticky;
-      left: 20px;
       font-family:'Nunito',sans-serif
     }
     .buttons{
       left: -20px;
+    }
+    .Button{
+      text-decoration: none;
+      padding: 0vh 2vw;
+      position: sticky;
+      font-family: 'Nunito',sans-serif
+    }
+    .bericht{
+      text-decoration: none;
+      padding: 0vh 2vw;
+      position: sticky;
+      font-family: 'Nunito',sans-serif;
+      
     }
 }
 
